--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=mobileStoreDb.db;"
+    "DefaultConnection": "Data Source=store.db;"
 
   },
 
